--- a/index.html
+++ b/index.html
@@ -25,40 +25,42 @@
                 </p>
                 <h3>You <em>know</em> you want to.</h3>
                 <h3 class="lets-do-this">Let's do this!</h3>
-                <form action="#" method="post" id="form">
+                <form action="#" method="post" id="form" novalidate>
                     <div class="form-content">
                                            
                         <div class="row1">
                             <div class="form-input">
                                 <label for="first-name">First Name</label>
-                                <input type="text" id="first-name" name="first-name" autocomplete="off" required>
+                                <input type="text" id="first-name" name="first-name" autocomplete="off" placeholder="First name">
                             </div>
                             <div class="form-input">
                                 <label for="last-name">Last Name</label>
-                                <input type="text" id="last-name" name="last-name" autocomplete="off" required>
+                                <input type="text" id="last-name" name="last-name" autocomplete="off" placeholder="Last name">
                             </div>
                         </div>
                         <div class="row1">
                             <div class="form-input">
                                 <label for="email">Email</label>
-                                <input type="email" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" autocomplete="off">
-                                <span class="error"></span>
+                                <input type="email" id="email" name="email" pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" autocomplete="off" placeholder="Email address">
+                                <span class="email-error"></span>
                             </div>
                             <div class="form-input">
                                 <label for="phone">Phone Number</label>
-                                <input type="tel" id="phone" name="phone" pattern="(0|[0-9])[0-9]{9,10}" minlength="9" maxlength="16" autocomplete="off">
-                                <span class="error"></span>
+                                <input type="tel" id="phone" name="phone" pattern="^(\+63\s\d{3}\s\d{3}\s\d{4})$" minlength="9" maxlength="16" autocomplete="off" placeholder="+63 XXX XXX XXXX">
+                                <span class="phone-error"></span>
                             </div>
                         </div>
                         <div class="row1">
                             <div class="form-input">
                                 <label for="password">Password</label>
-                                <input type="password" id="password" name="password" required>
-                                <span class="error"></span>
+                                <input type="password" id="password" name="password" minlength="8" placeholder="Password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}$">
+                                <span class="password-error1"></span>
+                                <span class="password-error2"></span>
                             </div>
                             <div class="form-input">
                                 <label for="confirm-password">Confirm Password</label>
-                                <input type="password" id="confirm-password" name="confirm-password" required>
+                                <input type="password" id="confirm-password" name="confirm-password" placeholder="Re-confirm password">
+                                <span class="confirm-pass-error"></span>
                             </div>
                         </div>
                     </div>
