--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
                             <div class="form-input">
                                 <label for="first-name">First Name</label>
                                 <input type="text" id="first-name" name="first-name" autocomplete="off" placeholder="First name">
+                                <span class="fname-error"></span>
                             </div>
                             <div class="form-input">
                                 <label for="last-name">Last Name</label>
                                 <input type="text" id="last-name" name="last-name" autocomplete="off" placeholder="Last name">
+                                <span class="lname-error"></span>
                             </div>
                         </div>
                         <div class="row1">
